--- a/src/app/projects/projects.component.scss
+++ b/src/app/projects/projects.component.scss
@@ -177,6 +177,7 @@ section#projectsHero {
   background: url("./../../assets/img/PatternT.svg"), #242432;
   background-attachment: fixed;
   img {
+    max-height: 100%;
     position: absolute;
     z-index: 1;
     filter: opacity(0.5);
