--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -27,7 +27,7 @@
 
 
   <section id="projectsHero">
-    <img src="./assets/img/home2.jpg" alt="">
+    <img src="/assets/img/home2.jpg" alt="">
     <h2>Mes Projets</h2>
 
   </section>
