--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -9,8 +9,10 @@ $circleRayon: 110vh;
   overflow: hidden;
   position: relative;
   // display: flex;
-  // background-image: url("./../../assets/img/ColoredPatternsT.svg"),linear-gradient(135deg, hsla(233, 35%, 18%, 1) 0%, hsla(242, 36%, 45%, 1) 100%);
-  background: url("./../../assets/img/PatternT.svg"), black;
+  // background-image: url("/assets/img/ColoredPatternsT.svg"),linear-gradient(135deg, hsla(233, 35%, 18%, 1) 0%, hsla(242, 36%, 45%, 1) 100%);
+  // background: url("/assets/img/PatternT.svg"), black;
+  background: url('/assets/img/PatternT.svg'), #242432;
+  color: floralwhite;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: bottom;
@@ -50,49 +52,117 @@ $circleRayon: 110vh;
     display: flex;
     align-items: center;
     #welcomeText {
-      opacity: 1;
-      flex: 1;
+      // opacity: 1;
+      // flex: 1;
       margin: 3%;
       color: white;
+
+      width: 50%;
       h2 {
         font-family: 'Oswald', sans-serif;
-        font-size: 50px;
+        font-size: 5rem;
         font-weight: 300;
-        color: #4c4848;
+        color: floralwhite;
+        line-height: 1.2;
+        margin-bottom: 30px;
         span {
           font-weight: 600;
         }
       }
-      button {
-        &.btn-grad {background-image: linear-gradient(to right, #e96443 0%, #904e95  51%, #e96443  100%)}
-        &.btn-grad {
-           margin: 10px;
-           padding: 15px 45px;
-           text-align: center;
-           text-transform: uppercase;
-           transition: 0.5s;
-           background-size: 200% auto;
-           color: white;
-           box-shadow: inset 2px 2px 5px #b3573b, inset -2px -2px 5px #282a52;
-           border-radius: 16px;
-           display: block;
-           border: none;
-           cursor: pointer;
-         }
+      p {
+        color: whitesmoke;
+        line-height: 2;
+      }
+      .homeButtons {
+        display: flex;
+        margin-left: 10%;
+        .nav {
+          width: fit-content;
+          position: relative;
+          z-index: 1;
+          margin-top: 60px;
+          span.text {
+            font-family: 'Kaushan Script', cursive;
+          }
+          &.navPortfolio .arrowAndText {
+            position: absolute;
+            left: -5%;
+            top: -50%;
+            span.material-icons {
+              transform: rotateX(179deg) rotateY(183deg) rotate(71deg) scaleX(2);
+              font-size: 2rem;
+            }
+          }
+          &.navInfo .arrowAndText {
+            position: absolute;
+            top: -50%;
+            right: 0;
+            span.material-icons {
+              transform: rotateX(182deg) rotate(55deg) scaleX(2);
+              font-size: 2rem;
+            }
+          }
+          button {
+          outline: none;
+          margin: 10px;
+          padding: 15px 45px;
+          text-align: center;
+          text-transform: uppercase;
+          border-radius: 16px;
+          display: block;
+          cursor: pointer;
+          // &.btn-grad {background-image: linear-gradient(to right, #e96443 0%, #904e95  51%, #e96443  100%)}
+          &.btn-grad {
+            transition: 0.5s;
+            background-size: 200% auto;
+            color: white;
+            background-image: linear-gradient(to right, #e96443 0%, #904e95  51%, #e96443  100%);
+            // box-shadow: inset 2px 2px 5px #b3573b, inset -2px -2px 5px #282a52;
+            border-radius: 16px;
+            border: 2px solid transparent;
+            &:hover {
+              background-position: right center; /* change the direction here */
+              color: #fff;
+              text-decoration: none;
+            }
+          }
 
-         &.btn-grad:hover {
-           background-position: right center; /* change the direction of the change here */
-           color: #fff;
-           text-decoration: none;
-         }
-         &.btn-grad:active {
-          box-shadow: inset -2px -2px 5px #b3573b, inset 2px 2px 5px #282a52;
-         }
-
+          &.btn-simple {
+            background: #242432;
+            color: #ed97ae;
+            border: 2px solid #ed97ae;
+            position: relative;
+            &::before {
+              content: "";
+              display: block;
+              width: 100%;
+              height: 100%;
+              background-color: #8b5765;
+              position: absolute;
+              inset: 0;
+              border-radius: 16px;
+              z-index: -1;
+              opacity: 1;
+              transform: scale(1);
+            }
+            &:hover {
+              &::before {
+                animation: buttonPulse 1s linear infinite;
+              }
+            }
+          }
+          @keyframes buttonPulse {
+            to {
+              opacity: 0;
+              transform: scale(1.2, 1.5);
+            }
+          }
+          }
+        }
       }
     }
     .img {
-      width: 60%;
+      width: 40%;
       position: relative;
       height: 100%;
       img {
@@ -103,15 +173,73 @@ $circleRayon: 110vh;
       }
       img.clip1 {
         left: 0%;
-        clip-path: inset(15px 69% 16px 0px round 16px 16px 16px 16px);
+        clip-path: inset(30px 70% 12px 0px round 16px 16px 16px 16px);
       }
       img.clip2 {
         left: 0%;
-        clip-path: inset(0px 35% 30px 33% round 16px 16px 16px 16px);
+        clip-path: inset(0px 36% 38px 33% round 16px 16px 16px 16px);
       }
       img.clip3 {
         left: 0%;
-        clip-path: inset(10px 0% 0px 67% round 16px 16px 16px 16px);
+        clip-path: inset(61px 0% 0px 67% round 16px 16px 16px 16px);
+      }
+    }
+    .imgClip {
+      height: 100%;
+      position: relative;
+      width: 65%;
+      img {
+        // clip-path: polygon(50% 0%, 100% 30%, 100% 70%, 50% 100%, 0 70%, 0 30%);
+        border-radius: 50%;
+        object-fit: cover;
+        position: absolute;
+
+        &.img1 {
+          height: 65vmin;
+          width: 65vmin;
+          top: 20%;
+          // transform: translateY(-50%);
+        }
+        &.img2 {
+          // width: 35%;
+          // height: 40%;
+          // left: 57%;
+          // top: 1%;
+          width: 30vmin;
+          height: 30vmin;
+          left: 62%;
+          top: 7%;
+        }
+        &.img3 {
+          // width: 35%;
+          // height: 40%;
+          // left: 67%;
+          // top: 38%;
+          width: 30vmin;
+          height: 30vmin;
+          left: 68%;
+          top: 45%;
+        }
+        &.img4 {
+          // width: 35%;
+          // height: 40%;
+          // left: 52%;
+          // top: 73%;
+          width: 30vmin;
+          height: 30vmin;
+          left: 57%;
+          top: 81%;
+        }
+        &.img5 {
+          // width: 35%;
+          // height: 40%;
+          // left: 52%;
+          // top: 73%;
+          width: 30vmin;
+          height: 30vmin;
+          left: 34%;
+          top: -15%;
+        }
       }
     }
   }
