--- a/src/app/projects/projet/projet.component.scss
+++ b/src/app/projects/projet/projet.component.scss
@@ -5,7 +5,7 @@
   // background: $color-primary;
   // background: #062029;
   // background: black;
-  background: url("./../../../assets/img/PatternT.svg"), #242432;
+  background: url("/assets/img/PatternT.svg"), #242432;
   background-attachment: fixed;
   color: floralwhite;
 }
@@ -137,7 +137,7 @@ h3 {
 
 section#tools {
   // background: white;
-  background: url('./../../../assets/img/PatternT.svg'), white;
+  background: url('/assets/img/PatternT.svg'), white;
   background-attachment: fixed;
   color: black;
   padding: 7% 5% 3%;
@@ -217,15 +217,15 @@ section#siteImages {
   display: flex;
   overflow: hidden;
   #siteImagesText {
+    background: url('/assets/img/PatternT.svg'), white;
+    background-attachment: fixed;
     position: relative;
     width: 50%;
     height: 70%;
-    background: url('./../../../assets/img/PatternT.svg'), white;
-    background-attachment: fixed;
     color: gray;
     box-shadow: inset 0 0 8px 2px #cccad9;
     h3 {
-      font-size: 4rem;
+      font-size: 5rem;
     }
     .sliderNav {
       position: absolute;
@@ -233,6 +233,7 @@ section#siteImages {
       width: 100%;
       display: flex;
       justify-content: space-around;
+      align-items: center;
       .nav {
         button {
           cursor: pointer;
@@ -240,10 +241,17 @@ section#siteImages {
           border: none;
           background: transparent;
           span {
-            font-size: 2rem;
-            // transform: scaleX(1.5);
+            padding: 15px;
+            font-size: 1.6rem;
+            border-radius: 50%;
+            background: linear-gradient(to top left, #904E95 33%, #e96443 100%);
+            box-shadow: inset -15px -3px 15px #7a427f, inset 15px 3px 15px #d68d8f;
+            color: white;
           }
         }
+      }
+      span.count {
+        font-size: 1.5rem;
       }
     }
   }
@@ -269,7 +277,8 @@ section#objectives{
   overflow: hidden;
   #descObjectives {
   ul {
-    position: relative;
+    position: absolute;
+    bottom: 50%;
     li {
       width: 70%;
       margin: auto;
