feat: about components

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -28,7 +28,7 @@
             <span class="material-icons">reply</span>
             <span class="text">c'est là</span>
           </div>
-          <button type="button" class="btn-simple" routerLink="/portfolio">En savoir plus</button>
+          <button type="button" class="btn-simple" routerLink="/about">En savoir plus</button>
         </div>
       </div>
 
