review: design home and projects, and setup menu component

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,5 +1,7 @@
 <div id="about">
 
+  <app-menu></app-menu>
+
   <section class="description">
     <img class="avatar" src="/assets/img/Avatar.svg" alt="">
     <p></p>
