--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,6 @@
 <div id="home">
 
+  <app-menu></app-menu>
   <!-- <div id="avatar" #avatar @animationAvatar *ngIf="!isMenuShowed" >
     <p class="textHello" #textHello>Hello</p>
     <img class="avatarImg" src="./../../assets/img/Avatar.svg" alt="">
@@ -34,9 +35,13 @@
 
     </div>
     <div class="img">
-      <img class="clip1" src="/assets/img/home2.jpg" alt="">
-      <img class="clip2" src="/assets/img/home2.jpg" alt="">
-      <img class="clip3" src="/assets/img/home2.jpg" alt="">
+      <img class="clip1" srcset="/assets/img/homeBig.jpg 1900w, /assets/img/home.jpg 640w" sizes="75vw" src="/assets/img/homeBig.jpg" alt="ordinateur portable avec un fond d'écran coloré">
+      <img class="clip2" srcset="/assets/img/homeBig.jpg 1900w, /assets/img/home.jpg 640w" sizes="75vw" src="/assets/img/homeBig.jpg" alt="ordinateur portable avec un fond d'écran coloré">
+      <img class="clip3" srcset="/assets/img/homeBig.jpg 1900w, /assets/img/home.jpg 640w" sizes="75vw" src="/assets/img/homeBig.jpg" alt="ordinateur portable avec un fond d'écran coloré">
+
+      <!-- <img class="clip1" src="/assets/img/home.jpg" alt="ordinateur portable avec un fond d'écran coloré">
+      <img class="clip2" src="/assets/img/home.jpg" alt="ordinateur portable avec un fond d'écran coloré">
+      <img class="clip3" src="/assets/img/home.jpg" alt="ordinateur portable avec un fond d'écran coloré"> -->
     </div>
     <!-- <div class="imgClip">
       <img class="img1" src="/assets/img/home2.jpg" alt="">
