--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,5 +1,7 @@
 <div id="projectsListPage">
 
+  <app-menu></app-menu>
+
   <!-- <div id="listOfProjects" #listOfProjects>
     <div class="projectCard" *ngFor="let project of list">
       <div class="devCategory">
@@ -27,7 +29,7 @@
 
 
   <section id="projectsHero">
-    <img src="/assets/img/home2.jpg" alt="">
+    <img src="/assets/img/home.jpg" alt="">
     <h2>Mes Projets</h2>
 
   </section>
