--- a/src/app/projects/projet/projet.component.html
+++ b/src/app/projects/projet/projet.component.html
@@ -42,7 +42,7 @@
 
     <section id="siteImages">
       <div id="siteImagesText">
-        <h3>Le projet<br>en images...</h3>
+        <h3>Le site<br>en images...</h3>
         <div class="sliderNav">
           <div class="nav">
             <button (click)="previousSlide()"><span class="material-icons">west</span></button>
