--- a/src/app/projects/projet/projet.component.scss
+++ b/src/app/projects/projet/projet.component.scss
@@ -61,22 +61,23 @@ a.urlLink {
   padding: 12px 24px;
   text-decoration: none;
   color: white;
-  background: #a15286;
+  background-image: linear-gradient(to right, #e96443, #904e95 65%);
+  box-shadow: inset -9px -14px 20px #7a427f, inset 9px 7px 20px #e4826c, 0px 0px 5px 0px #726f7f;
   border-radius: 25px;
-  font-size: 1.2rem;
-  box-shadow: 0 0 0 0 #585064;
-  animation: pulse 1.3s infinite;
+  /* font-size: 1.3rem; */
+  text-transform: uppercase;
+  // animation: pulse 1.3s infinite;
   &#linkBottom {
     right: 50%;
     bottom: 100%;
     transform: translateX(50%);
   }
 }
-@keyframes pulse {
-  to {
-      box-shadow: 0 0 0 20px transparent;
-  }
-}
+// @keyframes pulse {
+//   to {
+//       box-shadow: 0 0 0 20px transparent;
+//   }
+// }
 
 section#hero {
   position: relative;
@@ -87,9 +88,9 @@ section#hero {
     top: 6%;
     z-index: 10;
     font-family: $font-titles;
-    font-size: 128px;
+    font-size: 130px;
     // color: #f59a82;
-    color: antiquewhite;
+    color: floralwhite;
     text-shadow: 2px 4px 8px rgb(0 0 0 / 50%);
   }
   span {
@@ -97,7 +98,7 @@ section#hero {
     right: 10px;
     top: 46%;
     font-size: 1.5rem;
-    color: antiquewhite;
+    color: floralwhite;
     &::before {
       content: "";
       width: 400%;
@@ -140,7 +141,7 @@ section#tools {
   background: url('/assets/img/PatternT.svg'), white;
   background-attachment: fixed;
   color: black;
-  padding: 7% 5% 3%;
+  padding: 8% 5% 5%;
   position: relative;
   top: -20px;
   z-index: 1;
@@ -149,13 +150,15 @@ section#tools {
     color: snow;
     display: flex;
     justify-content: center;
-    background: linear-gradient(to right, #904e95 51%, #e96443 100%);
     flex-grow: 1;
     height: fit-content;
     flex-wrap: wrap;
-    box-shadow: 2px 3px 9px 1px #5e5e5e;
+    // background: linear-gradient(to right, #904e95 51%, #e96443 100%);
+    // box-shadow: 2px 3px 9px 1px #5e5e5e;
     h3 {
-      font-size: 5rem;
+      display: none;
+
+      font-size: 4rem;
       color: #a6a6b3;
       left: 0;
       bottom: 0;
@@ -168,7 +171,10 @@ section#tools {
       display: inline-block;
       margin: 15px;
       padding: 10px 20px;
-      font-size: 25px;
+      font-size: 22px;
+
+      color: #242432;
+      background: #dfdfe9;
     }
   }
 }
@@ -220,12 +226,15 @@ section#siteImages {
     background: url('/assets/img/PatternT.svg'), white;
     background-attachment: fixed;
     position: relative;
+    top: 10%;
     width: 50%;
     height: 70%;
-    color: gray;
+    color: #6b6b85;
     box-shadow: inset 0 0 8px 2px #cccad9;
     h3 {
       font-size: 5rem;
+      margin: 10%;
+      font-weight: bold;
     }
     .sliderNav {
       position: absolute;
@@ -244,8 +253,8 @@ section#siteImages {
             padding: 15px;
             font-size: 1.6rem;
             border-radius: 50%;
-            background: linear-gradient(to top left, #904E95 33%, #e96443 100%);
-            box-shadow: inset -15px -3px 15px #7a427f, inset 15px 3px 15px #d68d8f;
+            background-image: linear-gradient(to right, #e96443 0%, #904e95 51%, #e96443 100%);
+            box-shadow: inset -14px -17px 20px #7a427f, inset 15px 3px 15px #e4826c, 0px 0px 8px 0px #625f6f;
             color: white;
           }
         }
@@ -393,6 +402,7 @@ section#responsive {
 }
 
 section#footer {
+  margin-top: 100px;
   position: relative;
   height: 200px;
   .navOtherProject {
