--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -51,13 +51,19 @@ $circleRayon: 110vh;
     height: 100%;
     display: flex;
     align-items: center;
+
+    justify-content: center;
     #welcomeText {
-      // opacity: 1;
-      // flex: 1;
-      margin: 3%;
+      // margin: 3%;
+      // width: 50%;
       color: white;
 
-      width: 50%;
+      width: 100%;
+      position: relative;
+      left: 25%;
+      z-index: 2;
+      text-shadow: 2px 2px 10px black;
+
       h2 {
         font-family: 'Oswald', sans-serif;
         font-size: 5rem;
@@ -72,6 +78,9 @@ $circleRayon: 110vh;
       p {
         color: whitesmoke;
         line-height: 2;
+
+        font-size: 1.1rem;
+        font-weight: 600;
       }
       .homeButtons {
         display: flex;
@@ -162,26 +171,30 @@ $circleRayon: 110vh;
       }
     }
     .img {
-      width: 40%;
+      // width: 40%;
       position: relative;
       height: 100%;
+
+      width: 75%;
+      position: absolute;
+      opacity: 0.3;
       img {
         position: absolute;
         top: 50%;
         transform: translateY(-50%);
-        width: 90%;
+        width: 100%;
       }
       img.clip1 {
         left: 0%;
-        clip-path: inset(30px 70% 12px 0px round 16px 16px 16px 16px);
+        clip-path: inset(0px 70% 0px 0px round 16px 16px 16px 16px);
       }
       img.clip2 {
         left: 0%;
-        clip-path: inset(0px 36% 38px 33% round 16px 16px 16px 16px);
+        clip-path: inset(0px 36% 0px 33% round 16px 16px 16px 16px);
       }
       img.clip3 {
         left: 0%;
-        clip-path: inset(61px 0% 0px 67% round 16px 16px 16px 16px);
+        clip-path: inset(0px 0% 0px 67% round 16px 16px 16px 16px);
       }
     }
     .imgClip {
