--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,7 +10,7 @@ $color-primary: #0B3948;
 $color-secondary: #dc5a37;
 
 $font-text: 'Mulish', sans-serif;
-$font-titles: 'Oswald', sans-serif;
+$font-titles: 'Poiret One', cursive;
 
 body {
   font-family: $font-text;
